--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,10 @@
 <div>
     <h1>Login Part</h1>
-    <label>Username: </label>
-    <input type="text" id="login_username">
+    <label>Email: </label>
+    <input type="text" id="login_email" [(ngModel)]="data.email">
+    <br>
     <label>Password: </label>
-    <input type="password" id="login_password">
-    <button (click)="login($event)">login</button>
-</div>
-
-<div>
-    <h1>Register Part</h1>
-    <label>Username: </label>
-    <input type="text" id="register_username">
-    <label>Password: </label>
-    <input type="password" id="register_password">
-    <button (click)="register($event)">Register</button>
+    <input type="password" id="login_password" [(ngModel)]="data.password">
+    <br>
+    <button (click)="login()">login</button>
 </div>
