--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -15,19 +15,21 @@
     <li>
       <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
     </li>
-  
-    <li>
-      <button (click)="getIndex()">get index</button>
-    </li>
-    <li>
-      <button (click)="postReservation()">post method</button>
-    </li>
-    <li *ngIf="isLogin">
-      <button (click)="logout()">logout</button>
-    </li>
 
-    <li *ngIf="isLogin; else elseBlock">
-      You are login!
-    </li>
+    <div *ngIf="isLogin(); else elseBlock">
+      <li>
+        <button (click)="getIndex()">get index</button>
+      </li>
+      <li>
+        <button (click)="postReservation()">post method</button>
+      </li>
+      <li>
+        <button (click)="logout()">logout</button>
+      </li>
+
+      <li >
+        You are login!
+      </li>
+    </div>
     <ng-template #elseBlock>You are not not not login!</ng-template>
   </ul>
